Fix content position on small screen

--- a/app/styles/sections/_search.scss
+++ b/app/styles/sections/_search.scss
@@ -60,7 +60,7 @@
   }
 
   .has-subheader {
-    top: 120px;
+    top: 134px;
 
     @media (min-width: $grid-responsive-sm-break) {
       top: 88px;
